chore: extract version1.0.rar and import validation.ipynb

--- a/ModelTraining/ModelTraining.ipynb
+++ b/ModelTraining/ModelTraining.ipynb
@@ -369,10 +369,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "1c6bf258-1092-4dd5-9023-139929b9c2d6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alpha: 0.6 -> Hit Rate: 0.0730\n",
+      "Alpha: 0.7 -> Hit Rate: 0.0730\n",
+      "Alpha: 0.8 -> Hit Rate: 0.0740\n",
+      "Alpha: 0.9 -> Hit Rate: 0.0870\n",
+      "Alpha: 1.0 -> Hit Rate: 0.1630\n"
+     ]
+    }
+   ],
    "source": [
     "########################################\n",
     "# Part 8: Grid Search for Weighted Hybrid Model\n",
