--- a/Collaborative filtering.ipynb
+++ b/Collaborative filtering.ipynb
@@ -1,18 +1,16 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c8451894-4855-41c4-83ec-a3ab16777863",
+   "cell_type": "markdown",
+   "id": "46869c61-113d-4723-a0e5-f53f08ae564c",
    "metadata": {},
-   "outputs": [],
    "source": [
     "COLLOBARITIVE FILTERING - NEURAL COLLOBARITIVE FILTERING"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "adc4d295-682c-4d7c-a261-89a37240f073",
    "metadata": {},
    "outputs": [],
@@ -22,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "id": "f17892f1-eaee-4007-a827-40b71a281177",
    "metadata": {},
    "outputs": [],
@@ -55,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 4,
    "id": "33394063-05b0-4e17-a76a-028cf0bb67ee",
    "metadata": {},
    "outputs": [],
@@ -74,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 5,
    "id": "482ad64e-e45c-449a-9c44-166315739f11",
    "metadata": {},
    "outputs": [],
@@ -94,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "037f84e1-de32-45aa-a820-699b6fd3f682",
    "metadata": {},
    "outputs": [
@@ -117,7 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 16,
+   "id": "32576754-db7a-41c2-8daa-594c9a9e665f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8. Export to CSV file\n",
+    "df = pd.DataFrame(similar_pids)\n",
+    "df.to_csv(\"similar_pids.csv\", index=False, header=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "2889fef7-7577-4234-9dff-64ac33b7a4cd",
    "metadata": {},
    "outputs": [
@@ -373,7 +383,8 @@
       "   - Just Kickin' It by Xscape\n",
       "   - Just Got Paid by Johnny Kemp\n",
       "   - Remember the Time by Michael Jackson\n",
-      "   - Quizas, Quizas, Quizas [Perhaps, Perhaps, Perhaps] by Ben E. King\n"
+      "   - Quizas, Quizas, Quizas [Perhaps, Perhaps, Perhaps] by Ben E. King\n",
+      "[1, 5, 31, 36, 38, 40, 68, 95, 105, 107, 123, 124, 136, 170, 173]\n"
      ]
     }
    ],
@@ -382,15 +393,16 @@
     "for pid in similar_pids:\n",
     "    print(f\"\\n🎵 Playlist {pid}:\")\n",
     "\n",
-    "    songs = df[df[\"pid\"] == pid][[\"track_name\", \"artist_name\"]].drop_duplicates()\n",
+    "    songs = df[df[\"pid\"] == pid].drop_duplicates()\n",
     "\n",
     "    for idx, row in songs.iterrows():\n",
-    "        print(f\"   - {row['track_name']} by {row['artist_name']}\")\n"
+    "        print(f\"   - {row['track_name']} by {row['artist_name']}\")\n",
+    "print(similar_pids)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "c9f7a6a1-ab23-463c-b2d0-94eae6a12ef3",
    "metadata": {},
    "outputs": [
@@ -422,9 +434,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -436,7 +448,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.10.16"
   }
  },
  "nbformat": 4,
