fix: content filtering sort and recommend the closest song

--- a/Content filtering.ipynb
+++ b/Content filtering.ipynb
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "7aebee79-64ff-4178-b7cd-db485938d784",
    "metadata": {},
    "outputs": [
@@ -593,8 +593,12 @@
     "    recommend_nearest(track_id, 1)[0]  # Extract first element\n",
     "    for track_id in df_nf[df_nf[\"pid\"] == 0][\"track_id\"]\n",
     "]\n",
-    "# print(np.array(recommendation_songs_rankings).shape)\n",
-    "print(recommendation_songs_rankings)"
+    "\n",
+    "print(recommendation_songs_rankings[])\n",
+    "\n",
+    "# 8. Export to CSV file\n",
+    "df = pd.DataFrame(recommendation_songs_rankings)\n",
+    "df.to_csv(\"recommendation_songs.csv\", index=False, header=False)"
    ]
   },
   {
