chore: working version of masking. 0.05% hit rate

--- a/Collaborative filtering.ipynb
+++ b/Collaborative filtering.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 50,
    "id": "adc4d295-682c-4d7c-a261-89a37240f073",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 51,
    "id": "f17892f1-eaee-4007-a827-40b71a281177",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "id": "33394063-05b0-4e17-a76a-028cf0bb67ee",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "id": "482ad64e-e45c-449a-9c44-166315739f11",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 54,
    "id": "037f84e1-de32-45aa-a820-699b6fd3f682",
    "metadata": {},
    "outputs": [
@@ -115,19 +115,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 55,
    "id": "32576754-db7a-41c2-8daa-594c9a9e665f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 8. Export to CSV file\n",
-    "df = pd.DataFrame(similar_pids)\n",
-    "df.to_csv(\"similar_pids.csv\", index=False, header=False)"
+    "df_similar = pd.DataFrame(similar_pids)\n",
+    "df_similar.to_csv(\"similar_pids.csv\", index=False, header=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "2889fef7-7577-4234-9dff-64ac33b7a4cd",
    "metadata": {},
    "outputs": [
@@ -393,7 +393,7 @@
     "for pid in similar_pids:\n",
     "    print(f\"\\n🎵 Playlist {pid}:\")\n",
     "\n",
-    "    songs = df[df[\"pid\"] == pid].drop_duplicates()\n",
+    "    songs = df[df[\"pid\"] == int(pid)].drop_duplicates()\n",
     "\n",
     "    for idx, row in songs.iterrows():\n",
     "        print(f\"   - {row['track_name']} by {row['artist_name']}\")\n",
@@ -402,7 +402,179 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
+   "id": "419f9ebf-6847-4521-a4cf-9bda6d11a945",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.90 % done\n",
+      "1.80 % done\n",
+      "2.70 % done\n",
+      "3.60 % done\n",
+      "4.50 % done\n",
+      "5.40 % done\n",
+      "6.29 % done\n",
+      "7.19 % done\n",
+      "8.09 % done\n",
+      "8.99 % done\n",
+      "9.89 % done\n",
+      "10.79 % done\n",
+      "11.69 % done\n",
+      "12.59 % done\n",
+      "13.49 % done\n",
+      "14.39 % done\n",
+      "15.29 % done\n",
+      "16.19 % done\n",
+      "17.08 % done\n",
+      "17.98 % done\n",
+      "18.88 % done\n",
+      "19.78 % done\n",
+      "20.68 % done\n",
+      "21.58 % done\n",
+      "22.48 % done\n",
+      "23.38 % done\n",
+      "24.28 % done\n",
+      "25.18 % done\n",
+      "26.08 % done\n",
+      "26.98 % done\n",
+      "27.87 % done\n",
+      "28.77 % done\n",
+      "29.67 % done\n",
+      "30.57 % done\n",
+      "31.47 % done\n",
+      "32.37 % done\n",
+      "33.27 % done\n",
+      "34.17 % done\n",
+      "35.07 % done\n",
+      "35.97 % done\n",
+      "36.87 % done\n",
+      "37.77 % done\n",
+      "38.67 % done\n",
+      "39.56 % done\n",
+      "40.46 % done\n",
+      "41.36 % done\n",
+      "42.26 % done\n",
+      "43.16 % done\n",
+      "44.06 % done\n",
+      "44.96 % done\n",
+      "45.86 % done\n",
+      "46.76 % done\n",
+      "47.66 % done\n",
+      "48.56 % done\n",
+      "49.46 % done\n",
+      "50.35 % done\n",
+      "51.25 % done\n",
+      "52.15 % done\n",
+      "53.05 % done\n",
+      "53.95 % done\n",
+      "54.85 % done\n",
+      "55.75 % done\n",
+      "56.65 % done\n",
+      "57.55 % done\n",
+      "58.45 % done\n",
+      "59.35 % done\n",
+      "60.25 % done\n",
+      "61.14 % done\n",
+      "62.04 % done\n",
+      "62.94 % done\n",
+      "63.84 % done\n",
+      "64.74 % done\n",
+      "65.64 % done\n",
+      "66.54 % done\n",
+      "67.44 % done\n",
+      "68.34 % done\n",
+      "69.24 % done\n",
+      "70.14 % done\n",
+      "71.04 % done\n",
+      "71.94 % done\n",
+      "72.83 % done\n",
+      "73.73 % done\n",
+      "74.63 % done\n",
+      "75.53 % done\n",
+      "76.43 % done\n",
+      "77.33 % done\n",
+      "78.23 % done\n",
+      "79.13 % done\n",
+      "80.03 % done\n",
+      "80.93 % done\n",
+      "81.83 % done\n",
+      "82.73 % done\n",
+      "83.62 % done\n",
+      "84.52 % done\n",
+      "85.42 % done\n",
+      "86.32 % done\n",
+      "87.22 % done\n",
+      "88.12 % done\n",
+      "89.02 % done\n",
+      "89.92 % done\n",
+      "90.82 % done\n",
+      "91.72 % done\n",
+      "92.62 % done\n",
+      "93.52 % done\n",
+      "94.41 % done\n",
+      "95.31 % done\n",
+      "96.21 % done\n",
+      "97.11 % done\n",
+      "98.01 % done\n",
+      "98.91 % done\n",
+      "99.81 % done\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "probability_of_including_for_testing = 10\n",
+    "\n",
+    "# Create an empty list to store results\n",
+    "all_similar_pids = []\n",
+    "\n",
+    "# To display progress\n",
+    "len_of_pids = len(df[\"pid\"].unique())\n",
+    "pid_counter = 0\n",
+    "\n",
+    "# Iterate over all unique pids\n",
+    "for query_pid in df[\"pid\"].unique():\n",
+    "    if probability_of_including_for_testing > random.randint(0, 100):\n",
+    "        similar_pids = get_similar_playlists(query_pid)\n",
+    "        all_similar_pids.append((query_pid, similar_pids))\n",
+    "\n",
+    "    # report progress of this algorithm\n",
+    "    pid_counter += 1\n",
+    "    if divmod(pid_counter, 800)[1] == 0:\n",
+    "        print(\"{:.2f}\".format(pid_counter / len_of_pids * 100), \"% done\")\n",
+    "\n",
+    "# Convert to DataFrame\n",
+    "df_similar_pids = pd.DataFrame(all_similar_pids, columns=[\"pid\", \"similar_pids\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "25e5acb1-777b-4602-81e5-490f64b07f34",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ Exported all similar playlists to similar_pids.csv\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Export to CSV\n",
+    "df_similar_pids.to_csv(\"all_similar_pids.csv\", index=False, header=True)\n",
+    "\n",
+    "print(\"\\n✅ Exported all similar playlists to similar_pids.csv\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
    "id": "c9f7a6a1-ab23-463c-b2d0-94eae6a12ef3",
    "metadata": {},
    "outputs": [
